--- a/RepositoryParser/RepositoryParser/RepositoryParser.csproj
+++ b/RepositoryParser/RepositoryParser/RepositoryParser.csproj
@@ -565,6 +565,16 @@
   <ItemGroup>
     <Resource Include="Assets\Icons\iconICO.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Images\AppLogoBlack.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Images\AppLogoGreen.png" />
+    <Resource Include="Assets\Images\AppLogoGrey.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Images\AppLogoGreen2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
