--- a/RepositoryParser/RepositoryParser/RepositoryParser.csproj
+++ b/RepositoryParser/RepositoryParser/RepositoryParser.csproj
@@ -575,6 +575,23 @@
   <ItemGroup>
     <Resource Include="Assets\Images\AppLogoGreen2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Icons\PNG_Gray\AreaChart_Gray.png" />
+    <Resource Include="Assets\Icons\PNG_Gray\ColumnChart_Gray.png" />
+    <Resource Include="Assets\Icons\PNG_Gray\Compare_Gray.png" />
+    <Resource Include="Assets\Icons\PNG_Gray\DoughnutChart_Gray.png" />
+    <Resource Include="Assets\Icons\PNG_Gray\LineChart_Gray.png" />
+    <Resource Include="Assets\Icons\PNG_Gray\PieChart_Gray.png" />
+    <Resource Include="Assets\Icons\PNG_Gray\Setting Gray.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Icons\PNG_DarkGray\AreaChart_DarkGray.png" />
+    <Resource Include="Assets\Icons\PNG_DarkGray\ColumnChart_DarkGray.png" />
+    <Resource Include="Assets\Icons\PNG_DarkGray\Compare_DarkGray.png" />
+    <Resource Include="Assets\Icons\PNG_DarkGray\LineChart_DarkGray.png" />
+    <Resource Include="Assets\Icons\PNG_DarkGray\PieChart_DarkGray.png" />
+    <Resource Include="Assets\Icons\PNG_DarkGray\Settings_DarkGray.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
