--- a/RepositoryParser/RepositoryParser/packages.config
+++ b/RepositoryParser/RepositoryParser/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
+  <package id="Costura.Fody" version="1.3.3.0" targetFramework="net452" developmentDependency="true" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="Extended.Wpf.Toolkit" version="2.6" targetFramework="net452" />
+  <package id="Fody" version="1.28.3" targetFramework="net452" developmentDependency="true" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.129" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net452" />
   <package id="mvvmlight" version="5.2.0.0" targetFramework="net452" />
