analysis disabled when there is no added repositories in the database

--- a/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
+++ b/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
@@ -149,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\ChangeType.cs" />
+    <Compile Include="Helpers\DataBaseHelper.cs" />
     <Compile Include="Interfaces\IDifferencesColoringService.cs" />
     <Compile Include="Interfaces\IGitService.cs" />
     <Compile Include="Interfaces\ISqLiteService.cs" />
