Persisting tests + type-safe enums

--- a/RepositoryParser/RepositoryParser.DataBaseManagementCore/RepositoryParser.DataBaseManagementCore.csproj
+++ b/RepositoryParser/RepositoryParser.DataBaseManagementCore/RepositoryParser.DataBaseManagementCore.csproj
@@ -84,6 +84,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\ChangeType.cs" />
     <Compile Include="Configuration\HibernateConfigurationHelper.cs" />
     <Compile Include="Configuration\LocalizationConstants.cs" />
     <Compile Include="Configuration\RepositoryType.cs" />
