--- a/RepositoryParser/RepositoryParser.Core/packages.config
+++ b/RepositoryParser/RepositoryParser.Core/packages.config
@@ -2,9 +2,12 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net46" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net46" />
   <package id="LibGit2Sharp" version="0.22.0" targetFramework="net46" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.129" targetFramework="net46" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
+  <package id="NHibernate" version="4.0.0.4000" targetFramework="net46" />
   <package id="SharpSvn.1.9-x64" version="1.9004.3879.127" targetFramework="net46" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
   <package id="System.Data.SQLite" version="1.0.102.0" targetFramework="net46" />
