--- a/RepositoryParser/RepositoryParser.Core/packages.config
+++ b/RepositoryParser/RepositoryParser.Core/packages.config
@@ -18,4 +18,5 @@
   <package id="Winterdom.IO.FileMap" version="2.0.2.0" targetFramework="net46" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net46" />
   <package id="WPFToolkit.DataVisualization" version="3.5.50211.1" targetFramework="net46" />
+  <package id="ZetaLongPaths" version="1.0.0.14" targetFramework="net46" />
 </packages>
