--- a/RepositoryParser/RepositoryParser/RepositoryParser.csproj
+++ b/RepositoryParser/RepositoryParser/RepositoryParser.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Helpers\CustomInputDialog.cs" />
     <Compile Include="Helpers\Enums\FilteringColumn.cs" />
     <Compile Include="Helpers\FilteringHelper.cs" />
+    <Compile Include="Helpers\SplashScreenHelper.cs" />
     <Compile Include="Helpers\StaticServiceProvider.cs" />
     <Compile Include="Properties\Resources.pl-PL.Designer.cs">
       <DependentUpon>Resources.pl-PL.resx</DependentUpon>
