--- a/RepositoryParser/RepositoryParser.Core/packages.config
+++ b/RepositoryParser/RepositoryParser.Core/packages.config
@@ -6,6 +6,7 @@
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net46" />
   <package id="LibGit2Sharp" version="0.22.0" targetFramework="net46" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.129" targetFramework="net46" />
+  <package id="ModernUICharts" version="1.0.2" targetFramework="net46" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
   <package id="NHibernate" version="4.0.0.4000" targetFramework="net46" />
   <package id="SharpSvn.1.9-x64" version="1.9004.3879.127" targetFramework="net46" />
