--- a/RepositoryParser/RepositoryParser/packages.config
+++ b/RepositoryParser/RepositoryParser/packages.config
@@ -9,6 +9,7 @@
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net46" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.160" targetFramework="net46" />
   <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net46" />
+  <package id="ModernUICharts" version="1.0.2" targetFramework="net46" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net46" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
   <package id="NHibernate" version="4.0.0.4000" targetFramework="net46" />
